--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 ::before {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 .fixed-width {
@@ -24,7 +25,7 @@ header {
     flex-direction: column;
     align-items: center;
 
-    width: 100vw;
+    width: 100%;
     height: 85vh;
 
     background-color: aqua;
@@ -66,10 +67,21 @@ nav ul {
     gap: 1rem;
 }
 
-section {
+.about-uc {
     display: flex;
+    align-items: center;
+    gap: 1rem;
+
+    padding: 2rem;
 }
 
-.about-uc {
+.about-uc img {
+    width: 50%;
+    height: auto;
+}
 
+.about-text {
+    display: flex;
+    flex-flow: column wrap;
+    gap: 1rem;
 }
