--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,8 @@ header {
     width: 100%;
     height: 85vh;
 
-    background-color: aqua;
+    background-color: #144e94;
+    color: white;
 
     text-align: center;
 }
