reset a tag style

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,11 @@
     width: 1120px;
 }
 
+a {
+    color: unset;
+    text-decoration: none;
+}
+
 body {
     font-family: 'Poppins', sans-serif;
     
