--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,20 @@
     max-width: 1120px;
 }
 
+.container {
+    margin: 3rem auto;
+
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 6rem;
+}
+
+.card {
+    width: 350px;
+    text-align: center;
+}
+
 a {
     color: unset;
     text-decoration: none;
@@ -114,22 +128,26 @@ nav ul {
     color: white;
 }
 
-.mis-vis .container {
-    margin: 3rem auto;
-
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 6rem;
-}
-
-.card {
-    width: 450px;
-    text-align: center;
-}
-
-.card img {
+.mis-vis .card img {
     width: 100px;
     height: 100px;
     margin-bottom: 1rem;
+}
+
+.programs {
+    gap: 2.2rem;
+}
+
+.programs .card img {
+    object-fit: cover;
+    transform: translate3d(0, 0, 1px);
+    width: 100%;
+    max-width: 300px;
+    height: 300px;
+}
+
+.programs .card {
+    width: 300px;
+
+    text-align: left;
 }
