--- a/css/style.css
+++ b/css/style.css
@@ -151,3 +151,61 @@ nav ul {
 
     text-align: left;
 }
+
+.news {
+    width: 100%;
+
+    background-color: #ffff57;
+}
+
+.news .container {
+    gap: 1.5rem !important;
+}
+
+.news aside {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.news .card-small {
+    width: 235px;
+    height: 235px;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.news .card-small img {
+    object-fit: cover;
+    width: 100%;
+    height: 175px;
+}
+
+.news .card-small h5 {
+    background-color: white;
+    flex: 1;
+
+    padding: 0.6rem;
+}
+
+.news .card-big {
+    position: relative;
+
+    width: 550px;
+    height: 550px;
+}
+
+.news .card-big img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.news .card-big .news-title {
+    position: absolute;
+    bottom: 8px;
+    left: 16px;
+
+    color: white;
+}
