--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@
 ::before {
     margin: 0;
     padding: 0;
-    /* box-sizing: border-box; */
 }
 
 .fixed-width {
@@ -208,4 +207,20 @@ nav ul {
     left: 16px;
 
     color: white;
+}
+
+footer {
+    width: 100%;
+
+    background-color: #144e94;
+    color: white;
+}
+
+footer .footer-text {
+    margin: 1rem auto;
+
+    text-align: center;
+
+    font-weight: 200;
+    font-size: 0.9rem;
 }
