--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,10 @@ header {
     height: 85vh;
 
     background-color: #144e94;
+    background-image: url(../img/julius-dudenas-Jrq8ONPnrIU-unsplash.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     color: white;
 
     text-align: center;
