add shadow to hero title

--- a/css/style.css
+++ b/css/style.css
@@ -70,8 +70,11 @@ header {
 }
 
 .hero-title h1 {
-    font-size: 48px;
+    font-size: 58px;
     font-weight: 700;
+
+    letter-spacing: 4px;
+    text-shadow: 3px 3px #0a3a93;
 }
 
 .nav-container {
