--- a/css/style.css
+++ b/css/style.css
@@ -224,6 +224,8 @@ nav ul {
 
     display: flex;
     flex-direction: column;
+
+    transition: transform 0.2s;
 }
 
 .news .card-small img {
@@ -244,6 +246,8 @@ nav ul {
 
     width: 500px;
     height: 500px;
+
+    transition: transform 0.2s;
 }
 
 .news .card-big img {
@@ -258,6 +262,11 @@ nav ul {
     left: 16px;
 
     color: white;
+}
+
+.news .card-small:hover,
+.news .card-big:hover {
+    transform: scale(1.05);
 }
 
 footer {
