--- a/pages/profile/profile.css
+++ b/pages/profile/profile.css
@@ -11,11 +11,11 @@ body {
     box-sizing: border-box;
 }
 
-ul {
+.people ul {
     margin-bottom: 1rem;
 }
 
-li {
+.people li {
     margin-left: 2.5rem;
 }
 
@@ -24,8 +24,6 @@ li {
     flex-direction: column;
     align-items: center;
     gap: 2rem;
-
-    margin: 2rem;
 }
 
 .box {
