change feedback box

--- a/css/feedback.css
+++ b/css/feedback.css
@@ -20,7 +20,7 @@ body {
 
 .container {
   width: 360px;
-  background-color: #1965c2;
+  background-color: #144e94;
   box-shadow: 0 0 20px rgb(161, 156, 156);
 
   border-radius: 10px;
@@ -64,7 +64,7 @@ form input {
 }
 
 form textarea {
-  padding: 5px 15px;
+  padding: 20px 15px;
   border: 1px solid rgb(110, 106, 106);
   border-radius: 5px;
   font-size: 15px;
@@ -75,12 +75,12 @@ form textarea {
 form button {
   margin-top: 5px;
   border: none;
-  background: rgb(105, 147, 238);
-  color: rgb(216, 220, 231);
+  /* background: rgb(105, 147, 238); */
+  /* color: rgb(216, 220, 231); */
   padding: 10px 0;
   width: 100%;
-  font-size: 20px;
-  font-weight: 800;
+  font-size: 16px;
+  /* font-weight: 800; */
   cursor: pointer;
   border-radius: 3px;
 }
