--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ header {
     height: 85vh;
 
     background-color: #144e94;
-    background-image: url(../img/julius-dudenas-Jrq8ONPnrIU-unsplash.jpg);
+    background-image: url(../img/julius-dudenas-Jrq8ONPnrIU-unsplash\ \(Large\).jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
