--- a/css/profile.css
+++ b/css/profile.css
@@ -3,14 +3,26 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
     font-family: 'Poppins', sans-serif;
-
-    box-sizing: border-box;
-    
     position: relative;
+
+    padding: 8rem 0;
+    background-image: url("https://img.freepik.com/free-photo/abstract-luxury-gradient-blue-background-smooth-dark-blue-with-black-vignette-studio-banner_1258-52379.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
+    color: white;
+}
+
+.title {
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 3rem;
 }
 
 .people ul {
@@ -26,8 +38,6 @@ body {
     flex-direction: column;
     align-items: center;
     gap: 2rem;
-    
-    padding: 8rem 0;
 }
 
 .box {
@@ -37,6 +47,10 @@ body {
     padding: 1.5rem 2.5rem;
 
     width: 70%;
+
+    background-color: #144e94;
+    color: white;
+    border-radius: 8px;
 }
 
 .box img {
