--- a/css/feedback.css
+++ b/css/feedback.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -9,26 +10,48 @@
 
 body {
   display: flex;
+  flex-direction: column;
   min-height: 100vh;
   align-items: center;
   justify-content: center;
-  color: rgb(255, 251, 251);
-  /* background-image: url(/img/uclm-.jpg); */
-  background-image: url('https://img.freepik.com/free-photo/abstract-luxury-gradient-blue-background-smooth-dark-blue-with-black-vignette-studio-banner_1258-52379.jpg');
+  color: rgb(255, 255, 255);
+  background-image: url(../img/uclm-.jpg);
   background-position: center;
   background-size: cover;
+  transform: 10px;
+  transition: 2px;
+}
+
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: rgba(17, 110, 163, 0.404);
+  display: flex;
+  padding: 10px 20px;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+}
+
+header img {
+  max-height: 60px;
+  max-width: 100%;
+  border-radius: 7px;
 }
 
 .container {
-  width: 360px;
-  background-color: #144e94;
-  /* box-shadow: 0 0 20px rgb(161, 156, 156); */
-
+  width: 380px;
+  background-color: #2e77d1b4;
+  box-shadow: 0 0 20px rgb(204, 203, 203);
   border-radius: 10px;
+  display: flex;
+  z-index: 99;
+  margin-top: 20px;
 }
 
 i {
-  color: rgb(117, 103, 103);
+  color: rgb(255, 255, 255);
 }
 
 .container form {
@@ -57,35 +80,113 @@ form input {
   width: 100%;
   height: 50px;
   margin: 4px 0;
-  border: 1px solid rgb(97, 92, 92);
+  border: 2px solid rgba(244, 245, 255, 0.966);
   border-radius: 5px;
   font-size: 15px;
   padding: 0 15px;
   padding-right: 45px;
+  background: rgba(255, 251, 251, 0.555);
 }
 
 form textarea {
-  padding: 20px 15px;
-  border: 1px solid rgb(110, 106, 106);
+  padding: 5px 15px;
+  border: 2px solid rgb(255, 254, 254);
   border-radius: 5px;
   font-size: 15px;
   width: 100%;
   margin: 4px 0;
+  background: rgba(255, 251, 251, 0.555);
 }
 
-form button {
-  margin-top: 5px;
-  border: none;
-  /* background: rgb(105, 147, 238); */
-  /* color: rgb(216, 220, 231); */
-  padding: 10px 0;
-  width: 100%;
-  font-size: 14px;
-  /* font-weight: 800; */
+form .button {
+  --color: #f7f318d8;
+  padding: 0.8em 1.7em;
+  background-color: transparent;
+  border-radius: 0.6em;
+  position: relative;
+  overflow: hidden;
   cursor: pointer;
-  border-radius: 3px;
+  transition: 0.3s;
+  font-weight: 1000;
+  font-size: 20px;
+  border: 2px solid;
+  font-family: inherit;
+  text-transform: uppercase;
+  color: var(--color);
+  z-index: 1;
+  width: 100%;
 }
 
-button:hover {
-  background-color: #e67e22;
+.button::before,
+.button::after {
+  content: "";
+  display: block;
+  width: 50px;
+  height: 50px;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  border-radius: 50%;
+  z-index: -1;
+  background-color: var(--color);
+  transition: 1s ease;
+}
+
+.button::before {
+  top: -1em;
+  left: -1em;
+}
+
+.button::after {
+  left: calc(100% + 1em);
+  top: calc(100% + 1em);
+}
+
+.button:hover::before,
+.button:hover::after {
+  height: 410px;
+  width: 410px;
+}
+
+.button:hover {
+  color: rgb(255, 255, 255);
+}
+
+.button:active {
+  filter: brightness(0.8);
+}
+
+.input-style {
+  padding: 10px;
+  border: 2px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+  color: #ffffffda;
+  outline: none;
+}
+
+.input-style:focus {
+  border-color: #ffffffc4;
+  box-shadow: 0 0 0 0.2rem #fefeffb9;
+  border: 2px solid;
+}
+
+.container form h1:hover {
+  transform: scale(1.2);
+  transition: transform 0.2s linear;
+}
+
+header img:hover {
+  transform: scale(1.2);
+  transition: transform 0.5s ease-in-out;
+}
+
+.container form .id i:hover {
+  transform: scale(1.2) translateY(-5px);
+  transition: transform 0.3s ease-in-out;
+}
+
+.container:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 0 30px rgba(204, 203, 203, 0.8);
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
