--- a/css/style.css
+++ b/css/style.css
@@ -82,11 +82,15 @@ header {
     align-items: center;
 }
 
-@keyframes fadeIn {
+@keyframes fadeDropIn {
 	0% {
 		opacity: 0;
 		transform: translateY(-1.5rem);
 	}
+
+    45% {
+        opacity: 0.7;
+    }
 
 	100% {
 		opacity: 1;
@@ -101,7 +105,7 @@ header {
     letter-spacing: 4px;
     text-shadow: 3px 3px #0a3a93;
 
-    animation: fadeIn 2s linear 0s 1 normal none;
+    animation: fadeDropIn 2s ease 0s 1 normal none;
 }
 
 .nav-container {
@@ -211,7 +215,13 @@ nav ul {
     width: 300px;
 
     text-align: left;
+
+    animation: fadeDropIn 2s ease;
 }
+
+.programs .card:nth-child(1) { animation-delay: 0.5s; }
+.programs .card:nth-child(2) { animation-delay: 0.9s; }
+.programs .card:nth-child(3) { animation-delay: 1.3s; }
 
 .programs button {
     border: 1px solid black;
