make profile bg fixed

--- a/css/profile.css
+++ b/css/profile.css
@@ -13,7 +13,8 @@ body {
     padding: 8rem 0;
     background-image: url("https://img.freepik.com/free-photo/abstract-luxury-gradient-blue-background-smooth-dark-blue-with-black-vignette-studio-banner_1258-52379.jpg");
     background-repeat: no-repeat;
-    background-size: cover;
+    background-attachment: fixed;
+    background-size: 100% 100%;
     background-position: center;
 
     color: white;
