--- a/css/style.css
+++ b/css/style.css
@@ -1,308 +1,256 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300;400;500;600;700&display=swap");
+
+:root {
+  --bg: #021518;
+  --bg2: #010f11;
+  --fg: #ffffff;
+}
 
 *,
 ::after,
 ::before {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 button::-moz-focus-inner,
 input::-moz-focus-inner {
   border: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 button {
-    all: unset;
+  all: unset;
+  margin-top: 2.5em;
+  padding: 1em 2em;
+  border: 1px solid var(--fg);
+  border-radius: 8px;
 }
 
 button:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .fixed-width {
-    max-width: 1120px;
+  max-width: 1120px;
 }
 
 .container {
-    margin: 3rem auto;
+  margin: 3rem auto;
 
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
-.card {
-    width: 350px;
-    text-align: center;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 a {
-    color: unset;
-    text-decoration: none;
+  color: unset;
+  text-decoration: none;
+}
 
-    font-weight: 200;
+h1 {
+  font-size: 3em;
+  margin-bottom: 0.5em;
+}
+
+p {
+  font-size: 1.2em;
+  text-align: justify;
 }
 
 body {
-    font-family: 'Poppins', sans-serif;
-    
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  font-family: "Chakra Petch", sans-serif;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  background-color: var(--bg);
+  color: var(--fg);
 }
 
 header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: center;
 
-    width: 100%;
-    height: 85vh;
+  width: 100%;
+  height: 100vh;
 
-    background-color: #144e94;
-    background-image: url(../img/julius-dudenas-Jrq8ONPnrIU-unsplash\ \(Large\).jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    color: white;
-
-    text-align: center;
+  background-image: url("../img/wallpaperflare.com_wallpaper.jpg");
+  background-size: cover;
+  background-position: center;
 }
 
-.hero-title {
-    width: 480px;
-    margin: 0 auto;
-
-    flex: 1;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
+header .hero-title {
+  text-align: center;
 }
 
-@keyframes fadeDropIn {
-	0% {
-		opacity: 0;
-		transform: translateY(-1.5rem);
-	}
-
-    45% {
-        opacity: 0.7;
-    }
-
-	100% {
-		opacity: 1;
-		transform: translateY(0);
-	}
+header h1 {
+  font-size: 3.5em;
+  text-transform: uppercase;
+  margin-bottom: 0;
 }
 
-.hero-title h1 {
-    font-size: 58px;
-    font-weight: 700;
+header h2 {
+  font-size: 2em;
+  font-weight: 500;
+}
 
-    letter-spacing: 4px;
-    text-shadow: 3px 3px #0a3a93;
-
-    animation: fadeDropIn 2s ease 0s 1 normal none;
+#background-video {
+  object-fit: cover;
+  width: 50%;
+  height: auto;
 }
 
 .nav-container {
-    width: 100%;
+  width: 100%;
 
-    background-color: rgba(0, 0, 0, 0.5);
+  padding: 1rem 0;
 
-    padding: 1rem 0;
+  position: fixed;
+  top: 0;
 
-    position: fixed;
+  z-index: 1;
 
-    z-index: 1;
+  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#000000+0,000000+100&0.65+0,0+100;Neutral+Density */
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.65) 0%,
+    rgba(0, 0, 0, 0) 95%
+  ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  
+  transition: top 0.3s;
 }
 
 nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
-    width: 100%;
+  width: 100%;
 
-    margin: 0 auto;
+  color: var(--fg);
+
+  margin: 0 auto;
 }
 
 nav img {
-    width: 70px;
-    height: auto;
+  width: 45px;
+  height: auto;
 }
 
 nav ul {
-    list-style: none;
+  list-style: none;
 
-    display: flex;
-    gap: 1rem;
+  display: flex;
+  gap: 1rem;
 }
 
-.about-uc {
-    flex: 1;
+.about-us {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 3.2em;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 1rem;
+  margin: 8em 4em;
 
-    padding: 4rem 2rem;
+  text-align: center;
 }
 
-.about-uc img {
-    width: 100%;
-    max-width: 530px;
-    height: auto;
+.about-us .about-us-text {
+  max-width: 876px;
 }
 
-.about-text {
-    width: 50%;
-
-    display: flex;
-    flex-flow: column wrap;
-    gap: 1.5rem;
+.cards {
+  display: flex;
+  flex-flow: column wrap;
+  gap: 4.5em;
 }
 
-.about-text p {
-    font-size: 18px;
+.img-card-hoz {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+  gap: 2.5em;
 }
 
-.mis-vis {
-    width: 100%;
-
-    background-color: #144e94;
-    color: white;
+.img-card-hoz img {
+  width: 100%;
+  max-width: 400px;
+  height: 400px;
+  object-fit: cover;
 }
 
-.mis-vis .container {
-    gap: 6rem;
+.img-card-hoz .card-text {
+  flex: 1;
 }
 
-.mis-vis .card img {
-    width: 100px;
-    height: 100px;
-    margin-bottom: 1rem;
+.img-card-hoz .card-text p {
+  width: 100%;
+  max-width: 500px;
+  height: auto;
 }
 
-.programs {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 2rem;
+.img-card-hoz .contact-us {
+  background-color: var(--fg);
+  color: var(--bg);
 }
 
-.programs .cards {
-    display: flex;
-    flex-flow: row wrap;
-    gap: 2.2rem;
+.img-card-hoz .card-btns {
+  display: flex;
+  gap: 1.2em;
 }
 
-.programs .card img {
-    object-fit: cover;
-    transform: translate3d(0, 0, 1px);
-    width: 100%;
-    max-width: 300px;
-    height: 300px;
+.img-card-hoz button {
+  font-size: 0.85em;
+
+  transition: background-color 0.2s;
 }
 
-.programs .card {
-    width: 300px;
-
-    text-align: left;
+.img-card-hoz button:hover,
+.services-btns button:hover {
+  background-color: var(--bg2);
+  color: var(--fg);
 }
 
-.programs button {
-    border: 1px solid black;
-    border-radius: 8px;
-
-    padding: 1rem 1.5rem;
+.comsim img {
+  order: 2;
 }
 
-.news {
-    width: 100%;
-
-    background-color: #ffff77;
+.services {
+  padding: 0 2em 4em;
 }
 
-.news .container {
-    gap: 1.5rem !important;
+.services-btns {
+  text-align: center;
 }
 
-.news aside {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
+.services-btns button {
+  background-color: var(--fg);
+  color: var(--bg);
+  font-weight: bold;
+  padding: 1em 4em;
+  margin-top: 0;
 
-.news .card-small {
-    width: 235px;
-    height: 235px;
-
-    display: flex;
-    flex-direction: column;
-
-    transition: transform 0.2s;
-}
-
-.news .card-small img {
-    object-fit: cover;
-    width: 100%;
-    height: 175px;
-}
-
-.news .card-small h5 {
-    background-color: white;
-    flex: 1;
-
-    padding: 0.6rem;
-}
-
-.news .card-big {
-    position: relative;
-
-    width: 500px;
-    height: 500px;
-
-    transition: transform 0.2s;
-}
-
-.news .card-big img {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-}
-
-.news .card-big .news-title {
-    position: absolute;
-    bottom: 8px;
-    left: 16px;
-
-    color: white;
-}
-
-.news .card-small:hover,
-.news .card-big:hover {
-    transform: scale(1.05);
+  transition: color 0.2s, background-color 0.2s;
 }
 
 footer {
-    width: 100%;
-
-    background-color: #144e94;
-    color: white;
+  width: 100%;
+  background-color: var(--bg2);
 }
 
 footer .footer-text {
-    margin: 1rem auto;
+  margin: 1rem auto;
+}
 
-    text-align: center;
-
-    font-weight: 200;
-    font-size: 0.9rem;
+footer p {
+  font-weight: 200;
+  font-size: 0.9rem;
+  text-align: center;
 }
