--- a/css/display.css
+++ b/css/display.css
@@ -9,6 +9,10 @@ body {
   background-size: cover;
   background-attachment: fixed;
 
+  display: flex;
+
+  min-height: 100vh;
+
   color: var(--fg);
 }
 
@@ -31,6 +35,8 @@ footer {
   flex-direction: column;
   align-items: center;
   gap: 1rem;
+
+  flex: 1;
 }
 
 .user-post {
